[gd_scene load_steps=5 format=3 uid="uid://23qrkd77s8te"]

[ext_resource type="Script" uid="uid://ccj8j8nfd80tx" path="res://tilltracker.gd" id="1_k1gdj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k1gdj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ju7h6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fpajg"]

[node name="TillTracker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_k1gdj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label_IndexCount" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 36
text = "Till Tracker"
horizontal_alignment = 1
vertical_alignment = 2

[node name="VBoxContainer_Dollars" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBox_Hundred" type="HBoxContainer" parent="VBoxContainer/VBoxContainer_Dollars"]
layout_mode = 2

[node name="Label_Hundred" type="Label" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Hundred"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "100"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Button_HundredDecrement" type="Button" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Hundred"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "-"

[node name="LineEdit_HundredCount" type="LineEdit" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Hundred"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_ju7h6")
placeholder_text = "00"
alignment = 1

[node name="Button_HundredIncrement" type="Button" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Hundred"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "+"

[node name="Label_HundredTotal" type="Label" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Hundred"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 2

[node name="HBox_Fifty" type="HBoxContainer" parent="VBoxContainer/VBoxContainer_Dollars"]
layout_mode = 2

[node name="Label_Fifty" type="Label" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Fifty"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "50"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Button_FiftyDecrement" type="Button" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Fifty"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "-"

[node name="LineEdit_FiftyCount" type="LineEdit" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Fifty"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_ju7h6")
placeholder_text = "00"
alignment = 1

[node name="Button_FiftyIncrement" type="Button" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Fifty"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "+"

[node name="Label_FiftyTotal" type="Label" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Fifty"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 2

[node name="HBox_Twenty" type="HBoxContainer" parent="VBoxContainer/VBoxContainer_Dollars"]
layout_mode = 2

[node name="Label_Twenty" type="Label" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Twenty"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "20"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Button_TwentyDecrement" type="Button" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Twenty"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "-"

[node name="LineEdit_TwentyCount" type="LineEdit" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Twenty"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_ju7h6")
placeholder_text = "00"
alignment = 1

[node name="Button_TwentyIncrement" type="Button" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Twenty"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "+"

[node name="Label_TwentyTotal" type="Label" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Twenty"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 2

[node name="HBox_Ten" type="HBoxContainer" parent="VBoxContainer/VBoxContainer_Dollars"]
layout_mode = 2

[node name="Label_Ten" type="Label" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Ten"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "10"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Button_TenDecrement" type="Button" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Ten"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "-"

[node name="LineEdit_TenCount" type="LineEdit" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Ten"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_ju7h6")
placeholder_text = "00"
alignment = 1

[node name="Button_TenIncrement" type="Button" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Ten"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "+"

[node name="Label_TenTotal" type="Label" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Ten"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 2

[node name="HBox_Five" type="HBoxContainer" parent="VBoxContainer/VBoxContainer_Dollars"]
layout_mode = 2

[node name="Label_Five" type="Label" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Five"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "5"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Button_FiveDecrement" type="Button" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Five"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "-"

[node name="LineEdit_FiveCount" type="LineEdit" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Five"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_ju7h6")
placeholder_text = "00"
alignment = 1

[node name="Button_FiveIncrement" type="Button" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Five"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "+"

[node name="Label_FiveTotal" type="Label" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Five"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 2

[node name="HBox_Two" type="HBoxContainer" parent="VBoxContainer/VBoxContainer_Dollars"]
layout_mode = 2

[node name="Label_Two" type="Label" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Two"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "2"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Button_TwoDecrement" type="Button" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Two"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "-"

[node name="LineEdit_TwoCount" type="LineEdit" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Two"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_ju7h6")
placeholder_text = "00"
alignment = 1

[node name="Button_TwoIncrement" type="Button" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Two"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "+"

[node name="Label_TwoTotal" type="Label" parent="VBoxContainer/VBoxContainer_Dollars/HBox_Two"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 2

[node name="HBox_One" type="HBoxContainer" parent="VBoxContainer/VBoxContainer_Dollars"]
layout_mode = 2

[node name="Label_One" type="Label" parent="VBoxContainer/VBoxContainer_Dollars/HBox_One"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "1"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Button_OneDecrement" type="Button" parent="VBoxContainer/VBoxContainer_Dollars/HBox_One"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "-"

[node name="LineEdit_OneCount" type="LineEdit" parent="VBoxContainer/VBoxContainer_Dollars/HBox_One"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_ju7h6")
placeholder_text = "00"
alignment = 1

[node name="Button_OneIncrement" type="Button" parent="VBoxContainer/VBoxContainer_Dollars/HBox_One"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "+"

[node name="Label_OneTotal" type="Label" parent="VBoxContainer/VBoxContainer_Dollars/HBox_One"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 2

[node name="HBoxContainer_Subtotal_Dollars" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer_Subtotal_Dollars"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 36
text = "Sub-Total"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label_Subtotal_Dollars" type="Label" parent="VBoxContainer/HBoxContainer_Subtotal_Dollars"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 36
text = "0000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer_Cents" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBox_Whole" type="HBoxContainer" parent="VBoxContainer/VBoxContainer_Cents"]
layout_mode = 2

[node name="Label_Whole" type="Label" parent="VBoxContainer/VBoxContainer_Cents/HBox_Whole"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "1.00"
horizontal_alignment = 1

[node name="Button_WholeDecrement" type="Button" parent="VBoxContainer/VBoxContainer_Cents/HBox_Whole"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "-"

[node name="LineEdit_WholeCount" type="LineEdit" parent="VBoxContainer/VBoxContainer_Cents/HBox_Whole"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_ju7h6")
placeholder_text = "00"
alignment = 1

[node name="Button_WholeIncrement" type="Button" parent="VBoxContainer/VBoxContainer_Cents/HBox_Whole"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "+"

[node name="Label_WholeTotal" type="Label" parent="VBoxContainer/VBoxContainer_Cents/HBox_Whole"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="HBox_Half" type="HBoxContainer" parent="VBoxContainer/VBoxContainer_Cents"]
layout_mode = 2

[node name="Label_Half" type="Label" parent="VBoxContainer/VBoxContainer_Cents/HBox_Half"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = ".50"
horizontal_alignment = 1

[node name="Button_HalfDecrement" type="Button" parent="VBoxContainer/VBoxContainer_Cents/HBox_Half"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "-"

[node name="LineEdit_HalfCount" type="LineEdit" parent="VBoxContainer/VBoxContainer_Cents/HBox_Half"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_ju7h6")
placeholder_text = "00"
alignment = 1

[node name="Button_HalfIncrement" type="Button" parent="VBoxContainer/VBoxContainer_Cents/HBox_Half"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "+"

[node name="Label_HalfTotal" type="Label" parent="VBoxContainer/VBoxContainer_Cents/HBox_Half"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="HBox_Quarter" type="HBoxContainer" parent="VBoxContainer/VBoxContainer_Cents"]
layout_mode = 2

[node name="Label_Quarter" type="Label" parent="VBoxContainer/VBoxContainer_Cents/HBox_Quarter"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = ".25"
horizontal_alignment = 1

[node name="Button_QuarterDecrement" type="Button" parent="VBoxContainer/VBoxContainer_Cents/HBox_Quarter"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "-"

[node name="LineEdit_QuarterCount" type="LineEdit" parent="VBoxContainer/VBoxContainer_Cents/HBox_Quarter"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_ju7h6")
placeholder_text = "00"
alignment = 1

[node name="Button_QuarterIncrement" type="Button" parent="VBoxContainer/VBoxContainer_Cents/HBox_Quarter"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "+"

[node name="Label_QuarterTotal" type="Label" parent="VBoxContainer/VBoxContainer_Cents/HBox_Quarter"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="HBox_Dime" type="HBoxContainer" parent="VBoxContainer/VBoxContainer_Cents"]
layout_mode = 2

[node name="Label_Dime" type="Label" parent="VBoxContainer/VBoxContainer_Cents/HBox_Dime"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = ".10"
horizontal_alignment = 1

[node name="Button_DimeDecrement" type="Button" parent="VBoxContainer/VBoxContainer_Cents/HBox_Dime"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "-"

[node name="LineEdit_DimeCount" type="LineEdit" parent="VBoxContainer/VBoxContainer_Cents/HBox_Dime"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_ju7h6")
placeholder_text = "00"
alignment = 1

[node name="Button_DimeIncrement" type="Button" parent="VBoxContainer/VBoxContainer_Cents/HBox_Dime"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "+"

[node name="Label_DimeTotal" type="Label" parent="VBoxContainer/VBoxContainer_Cents/HBox_Dime"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="HBox_Nickel" type="HBoxContainer" parent="VBoxContainer/VBoxContainer_Cents"]
layout_mode = 2

[node name="Label_Nickel" type="Label" parent="VBoxContainer/VBoxContainer_Cents/HBox_Nickel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = ".05"
horizontal_alignment = 1

[node name="Button_NickelDecrement" type="Button" parent="VBoxContainer/VBoxContainer_Cents/HBox_Nickel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "-"

[node name="LineEdit_NickelCount" type="LineEdit" parent="VBoxContainer/VBoxContainer_Cents/HBox_Nickel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_ju7h6")
placeholder_text = "00"
alignment = 1

[node name="Button_NickelIncrement" type="Button" parent="VBoxContainer/VBoxContainer_Cents/HBox_Nickel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "+"

[node name="Label_NickelTotal" type="Label" parent="VBoxContainer/VBoxContainer_Cents/HBox_Nickel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="HBox_Penny" type="HBoxContainer" parent="VBoxContainer/VBoxContainer_Cents"]
layout_mode = 2

[node name="Label_Penny" type="Label" parent="VBoxContainer/VBoxContainer_Cents/HBox_Penny"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = ".01"
horizontal_alignment = 1

[node name="Button_PennyDecrement" type="Button" parent="VBoxContainer/VBoxContainer_Cents/HBox_Penny"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "-"

[node name="LineEdit_PennyCount" type="LineEdit" parent="VBoxContainer/VBoxContainer_Cents/HBox_Penny"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_ju7h6")
placeholder_text = "00"
alignment = 1

[node name="Button_PennyIncrement" type="Button" parent="VBoxContainer/VBoxContainer_Cents/HBox_Penny"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1gdj")
text = "+"

[node name="Label_PennyTotal" type="Label" parent="VBoxContainer/VBoxContainer_Cents/HBox_Penny"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="HBoxContainer_Subtotal_Cents" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer_Subtotal_Cents"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 36
text = "Sub-Total"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label_Subtotal_Cents" type="Label" parent="VBoxContainer/HBoxContainer_Subtotal_Cents"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 36
text = "0000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer_Total" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer_Total"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 44
text = "Total"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_Total" type="Label" parent="VBoxContainer/HBoxContainer_Total"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 44
text = "0000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button_Save" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxEmpty_fpajg")
text = "Save
"

[connection signal="pressed" from="VBoxContainer/VBoxContainer_Dollars/HBox_Hundred/Button_HundredDecrement" to="." method="_on_button_hundred_decrement_pressed"]
[connection signal="text_submitted" from="VBoxContainer/VBoxContainer_Dollars/HBox_Hundred/LineEdit_HundredCount" to="." method="_on_line_edit_hundred_count_text_submitted"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Dollars/HBox_Hundred/Button_HundredIncrement" to="." method="_on_button_hundred_increment_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Dollars/HBox_Fifty/Button_FiftyDecrement" to="." method="_on_button_fifty_decrement_pressed"]
[connection signal="text_submitted" from="VBoxContainer/VBoxContainer_Dollars/HBox_Fifty/LineEdit_FiftyCount" to="." method="_on_line_edit_fifty_count_text_submitted"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Dollars/HBox_Fifty/Button_FiftyIncrement" to="." method="_on_button_fifty_increment_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Dollars/HBox_Twenty/Button_TwentyDecrement" to="." method="_on_button_twenty_decrement_pressed"]
[connection signal="text_submitted" from="VBoxContainer/VBoxContainer_Dollars/HBox_Twenty/LineEdit_TwentyCount" to="." method="_on_line_edit_twenty_count_text_submitted"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Dollars/HBox_Twenty/Button_TwentyIncrement" to="." method="_on_button_twenty_increment_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Dollars/HBox_Ten/Button_TenDecrement" to="." method="_on_button_ten_decrement_pressed"]
[connection signal="text_submitted" from="VBoxContainer/VBoxContainer_Dollars/HBox_Ten/LineEdit_TenCount" to="." method="_on_line_edit_ten_count_text_submitted"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Dollars/HBox_Ten/Button_TenIncrement" to="." method="_on_button_ten_increment_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Dollars/HBox_Five/Button_FiveDecrement" to="." method="_on_button_five_decrement_pressed"]
[connection signal="text_submitted" from="VBoxContainer/VBoxContainer_Dollars/HBox_Five/LineEdit_FiveCount" to="." method="_on_line_edit_five_count_text_submitted"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Dollars/HBox_Five/Button_FiveIncrement" to="." method="_on_button_five_increment_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Dollars/HBox_Two/Button_TwoDecrement" to="." method="_on_button_two_decrement_pressed"]
[connection signal="text_submitted" from="VBoxContainer/VBoxContainer_Dollars/HBox_Two/LineEdit_TwoCount" to="." method="_on_line_edit_two_count_text_submitted"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Dollars/HBox_Two/Button_TwoIncrement" to="." method="_on_button_two_increment_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Dollars/HBox_One/Button_OneDecrement" to="." method="_on_button_one_decrement_pressed"]
[connection signal="text_submitted" from="VBoxContainer/VBoxContainer_Dollars/HBox_One/LineEdit_OneCount" to="." method="_on_line_edit_one_count_text_submitted"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Dollars/HBox_One/Button_OneIncrement" to="." method="_on_button_one_increment_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Cents/HBox_Whole/Button_WholeDecrement" to="." method="_on_button_whole_decrement_pressed"]
[connection signal="text_submitted" from="VBoxContainer/VBoxContainer_Cents/HBox_Whole/LineEdit_WholeCount" to="." method="_on_line_edit_whole_count_text_submitted"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Cents/HBox_Whole/Button_WholeIncrement" to="." method="_on_button_whole_increment_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Cents/HBox_Half/Button_HalfDecrement" to="." method="_on_button_half_decrement_pressed"]
[connection signal="text_submitted" from="VBoxContainer/VBoxContainer_Cents/HBox_Half/LineEdit_HalfCount" to="." method="_on_line_edit_half_count_text_submitted"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Cents/HBox_Half/Button_HalfIncrement" to="." method="_on_button_half_increment_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Cents/HBox_Quarter/Button_QuarterDecrement" to="." method="_on_button_quarter_decrement_pressed"]
[connection signal="text_submitted" from="VBoxContainer/VBoxContainer_Cents/HBox_Quarter/LineEdit_QuarterCount" to="." method="_on_line_edit_quarter_count_text_submitted"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Cents/HBox_Quarter/Button_QuarterIncrement" to="." method="_on_button_quarter_increment_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Cents/HBox_Dime/Button_DimeDecrement" to="." method="_on_button_dime_decrement_pressed"]
[connection signal="text_submitted" from="VBoxContainer/VBoxContainer_Cents/HBox_Dime/LineEdit_DimeCount" to="." method="_on_line_edit_dime_count_text_submitted"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Cents/HBox_Dime/Button_DimeIncrement" to="." method="_on_button_dime_increment_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Cents/HBox_Nickel/Button_NickelDecrement" to="." method="_on_button_nickel_decrement_pressed"]
[connection signal="text_submitted" from="VBoxContainer/VBoxContainer_Cents/HBox_Nickel/LineEdit_NickelCount" to="." method="_on_line_edit_nickel_count_text_submitted"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Cents/HBox_Nickel/Button_NickelIncrement" to="." method="_on_button_nickel_increment_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Cents/HBox_Penny/Button_PennyDecrement" to="." method="_on_button_penny_decrement_pressed"]
[connection signal="text_submitted" from="VBoxContainer/VBoxContainer_Cents/HBox_Penny/LineEdit_PennyCount" to="." method="_on_line_edit_penny_count_text_submitted"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_Cents/HBox_Penny/Button_PennyIncrement" to="." method="_on_button_penny_increment_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Save" to="." method="_on_button_save_pressed"]
